Add style in *. Add header, section, and footer.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Landing Page</title>
+    <style>
+        *{
+            margin:0;
+            padding:0;
+            box-sizing: border-box;
+            color: #1a1a2e;
+            font-family: sans-serif;
+        }
+    </style>
 </head>
 <body>
-    <nav>
-        <div class="navbar">
-            <ul class="navList">
-                <li></li>
-                <li></li>
-                <li></li>
+    <header>
+        <div id="logo">LOGO</div>
+        <nav>
+            <ul class="navlist">
+                <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
-        </div>
-    </nav>
-    
+        </nav>
+    </header>
+    <section id="hero"></section>
+    <section id="about"></section>
+    <section id="portfolio"></section>
+    <section id="contact"></section>
+    <footer></footer>
 </body>
 </html>
