Add media query in max-width: 768px for hero page dinamically

--- a/index.html
+++ b/index.html
@@ -74,6 +74,21 @@
             top: 28%;
             left: 55%;
         }
+
+        @media (max-width: 768px) {
+            .welcomeMessage {
+                font-size:0.6em;
+                top: 30%;
+            }
+            .welcomeMessage p {
+                font-size: 1rem;
+            }
+            .photo{
+                width: 17em;
+                height:17em;
+                left: 55%;
+            }
+        }
     </style>
 </head>
 <body>
